selfhost/test/typechecker/break/error_location_module_if.out
Error at %FILE_NAME%:2:3
Invalid location for break statement
  |    break
       ^
Break statements can only be used within loop bodies
